Morning edits (mostly cites)

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 .Ruserdata
 _bookdown_files/
 README.html
-resources/
 feedback/
 *.log
 *.synctex.gz
@@ -12,3 +11,5 @@ feedback/
 docs/main.tex
 **.o
 **.so
+resources/
+!docs/resources/
